added some grafana plugins

--- a/Lib/Neon.Kube.Setup/Resources/Helm/grafana/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/grafana/values.yaml
@@ -316,6 +316,16 @@ plugins:
   - grafana-strava-datasource
   - thalysantana-appcenter-datasource
   - grafana-athena-datasource
+  - gapit-htmlgraphics-panel
+  - boazreicher-mosaicplot-panel
+  - marcusolsson-hexmap-panel
+  - hadesarchitect-cassandra-datasource
+  - grafana-github-datasource
+  - fifemon-graphql-datasource
+  - grafana-googlesheets-datasource
+  - grafana-timestream-datasource
+  - grafana-polystat-panel
+  - grafana-salesforce-datasource
 
 ## Configure grafana datasources
 ## ref: http://docs.grafana.org/administration/provisioning/#datasources
