reload grafana when this secret is updated

--- a/Lib/Neon.Kube.Setup/Resources/Helm/grafana/templates/secretenv.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/grafana/templates/secretenv.yaml
@@ -3,5 +3,7 @@ kind: Secret
 metadata:
   name: grafana-env
   namespace: {{ .Release.Namespace }}
+  annotations:
+    reloader.stakater.com/match: "true"
 stringData:
   GF_INSTALL_PLUGINS: {{ join "," .Values.plugins }}
