--- a/Lib/Neon.Kube.Setup/Resources/Helm/grafana/templates/grafana.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/grafana/templates/grafana.yaml
@@ -63,7 +63,7 @@ spec:
     labels:
       app: grafana
     annotations:
-      sidecar.istio.io/inject: '{{ .Values.serviceMesh.enabled }}'
+      sidecar.istio.io/inject: "true"
       reloader.stakater.com/search: "true"
     envFrom:
       - secretRef:
