--- a/Lib/Neon.Kube.Setup/Resources/Helm/loki/templates/distributor/servicemonitor-distributor.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/loki/templates/distributor/servicemonitor-distributor.yaml
@@ -25,7 +25,7 @@ spec:
     matchLabels:
       {{- include "loki.distributorSelectorLabels" $ | nindent 6 }}
   endpoints:
-    - port: http
+    - port: http-metrics
       {{- with .interval }}
       interval: {{ . }}
       {{- end }}
