--- a/Lib/Neon.Kube.Setup/Resources/Helm/loki/templates/compactor/service-compactor.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/loki/templates/compactor/service-compactor.yaml
@@ -12,9 +12,9 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-    - name: http
+    - name: http-metrics
       port: 3100
-      targetPort: http
+      targetPort: http-metrics
       protocol: TCP
   selector:
     {{- include "loki.selectorLabels" . | nindent 4 }}
