--- a/Lib/Neon.Kube.Setup/Resources/Helm/loki/templates/index-gateway/servicemonitor-index-gateway.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/loki/templates/index-gateway/servicemonitor-index-gateway.yaml
@@ -31,7 +31,7 @@ spec:
         values:
           - "false"
   endpoints:
-    - port: http
+    - port: http-metrics
       {{- with .interval }}
       interval: {{ . }}
       {{- end }}
