--- a/Lib/Neon.Kube.Setup/Resources/Helm/loki/templates/query-frontend/servicemonitor-query-frontend.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/loki/templates/query-frontend/servicemonitor-query-frontend.yaml
@@ -25,7 +25,7 @@ spec:
     matchLabels:
       {{- include "loki.queryFrontendSelectorLabels" $ | nindent 6 }}
   endpoints:
-    - port: http
+    - port: http-metrics
       {{- with .interval }}
       interval: {{ . }}
       {{- end }}
