--- a/Lib/Neon.Kube.Setup/Resources/Helm/loki/templates/ruler/service-ruler.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/loki/templates/ruler/service-ruler.yaml
@@ -10,11 +10,10 @@ metadata:
     {{- end }}
 spec:
   type: ClusterIP
-  clusterIP: None
   ports:
-    - name: http
+    - name: http-metrics
       port: 3100
-      targetPort: http
+      targetPort: http-metrics
       protocol: TCP
     - name: grpc
       port: 9095
