--- a/Lib/Neon.Kube.Setup/Resources/Helm/loki/templates/table-manager/servicemonitor-table-manager.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/loki/templates/table-manager/servicemonitor-table-manager.yaml
@@ -26,7 +26,7 @@ spec:
     matchLabels:
       {{- include "loki.tableManagerSelectorLabels" $ | nindent 6 }}
   endpoints:
-    - port: http
+    - port: http-metrics
       {{- with .interval }}
       interval: {{ . }}
       {{- end }}
