--- a/Lib/Neon.Kube.Setup/Resources/Helm/mimir/templates/alertmanager/alertmanager-dep.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/mimir/templates/alertmanager/alertmanager-dep.yaml
@@ -27,6 +27,7 @@ spec:
       annotations:
         sidecar.istio.io/inject: "{{ .Values.serviceMesh.enabled }}"
         traffic.sidecar.istio.io/excludeInboundPorts: "7946"
+        traffic.sidecar.istio.io/excludeOutboundPorts: "7946"
 {{- if .Values.useExternalConfig }}
         checksum/config: {{ .Values.externalConfigVersion }}
 {{- else }}
