--- a/Lib/Neon.Kube.Setup/Resources/Helm/mimir/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/mimir/values.yaml
@@ -56,13 +56,13 @@ mimir:
     limits: {}
 
     alertmanager:
-      data_dir: '/data'
+      data_dir: '/alertmanager'
       enable_api: true
       external_url: '/alertmanager'
+      fallback_config_file: /etc/mimir-alertmanager/alertmanager.yaml
       sharding_ring:
         replication_factor: 1
 
-    {{- if .Values.minio.enabled }}
     alertmanager_storage:
       backend: s3
       s3:
@@ -71,7 +71,6 @@ mimir:
         access_key_id: ${ACCESS_KEY_ID}
         secret_access_key: ${SECRET_ACCESS_KEY}
         insecure: true
-    {{- end }}
 
     frontend_worker:
       frontend_address: {{ template "mimir.fullname" . }}-query-frontend-headless.{{ .Release.Namespace }}.svc:{{ include "mimir.serverGrpcListenPort" . }}
@@ -79,7 +78,7 @@ mimir:
     ruler:
       enable_api: true
       rule_path: '/data'
-      alertmanager_url: dnssrvnoa+http://_http-metrics._tcp.{{ template "mimir.fullname" . }}-alertmanager-headless.{{ .Release.Namespace }}.svc.cluster.local/alertmanager
+      alertmanager_url: dnssrvnoa+http://_http-metrics._tcp.{{ template "mimir.fullname" . }}-alertmanager-headless.{{ .Release.Namespace }}.svc.cluster.local:8080/alertmanager
 
     server:
       grpc_server_max_recv_msg_size: 104857600
@@ -159,7 +158,6 @@ mimir:
         insecure: true
       {{- end }}
 
-    {{- if .Values.minio.enabled }}
     ruler_storage:
       backend: s3
       s3:
@@ -168,7 +166,6 @@ mimir:
         access_key_id: ${ACCESS_KEY_ID}
         secret_access_key: ${SECRET_ACCESS_KEY}
         insecure: true
-    {{- end }}
 
 # runtimeConfig provides a reloadable runtime configuration file for some specific configuration.
 runtimeConfig: {}
@@ -1064,95 +1061,8 @@ memcached-metadata:
 minio:
   enabled: true
 
-# Configuration for nginx gateway
-nginx:
-  # -- Specifies whether nginx should be enabled
-  enabled: false
-  # -- Number of replicas for nginx
-  replicas: 1
-  # -- Enable logging of 2xx and 3xx HTTP requests
-  verboseLogging: true
-  autoscaling:
-    # -- Enable autoscaling for nginx
-    enabled: false
-    # -- Minimum autoscaling replicas for nginx
-    minReplicas: 1
-    # -- Maximum autoscaling replicas for nginx
-    maxReplicas: 3
-    # -- Target CPU utilisation percentage for nginx
-    targetCPUUtilizationPercentage: 60
-    # -- Target memory utilisation percentage for nginx
-    targetMemoryUtilizationPercentage:
-  # -- See `kubectl explain deployment.spec.strategy` for more,
-  # ref: https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#strategy
-  deploymentStrategy:
-    type: RollingUpdate
-  image:
-    # -- The Docker registry for nginx image
-    registry: docker.io
-    # -- The nginx image repository
-    repository: nginxinc/nginx-unprivileged
-    # -- The nginx image tag
-    tag: 1.19-alpine
-    # -- The nginx image pull policy
-    pullPolicy: IfNotPresent
-  # -- The name of the PriorityClass for nginx pods
-  priorityClassName: null
-  # -- Labels for nginx pods
-  podLabels: {}
-  # -- Annotations for nginx pods
-  podAnnotations: {}
-  # -- Pod Disruption Budget
-  podDisruptionBudget: {}
-  # -- Additional CLI args for nginx
-  extraArgs: []
-  # -- Environment variables to add to the nginx pods
-  extraEnv: []
-  # -- Environment variables from secrets or configmaps to add to the nginx pods
-  extraEnvFrom: []
-  # -- Volumes to add to the nginx pods
-  extraVolumes: []
-  # -- Volume mounts to add to the nginx pods
-  extraVolumeMounts: []
-  # -- The SecurityContext for nginx containers
-  podSecurityContext:
-    fsGroup: 1000
-    runAsGroup: 1000
-    runAsNonRoot: true
-    runAsUser: 1000
-  # -- The SecurityContext for nginx containers
-  containerSecurityContext:
-    readOnlyRootFilesystem: true
-    capabilities:
-      drop:
-        - ALL
-    allowPrivilegeEscalation: false
-  # -- Resource requests and limits for the nginx
-  resources: {}
-  # -- Grace period to allow the nginx to shutdown before it is killed
-  terminationGracePeriodSeconds: 30
-  # -- Affinity for nginx pods. Passed through `tpl` and, thus, to be configured as string
-  # @default -- Hard node and soft zone anti-affinity
-  affinity: |
-    podAntiAffinity:
-      preferredDuringSchedulingIgnoredDuringExecution:
-        - weight: 100
-          podAffinityTerm:
-            labelSelector:
-              matchExpressions:
-                - key: component
-                  operator: In
-                  values:
-                    - nginx
-            topologyKey: failure-domain.beta.kubernetes.io/zone
-
-  annotations: {}
-
-  # -- Node selector for nginx pods
-  nodeSelector: {}
-  # -- Tolerations for nginx pods
-  tolerations: []
-  # Nginx service configuration
+# Configuration for istio gateway
+istio:
   service:
     # -- Port of the nginx service
     port: 80
@@ -1162,168 +1072,7 @@ nginx:
     clusterIP: null
     # -- Node port if service type is NodePort
     nodePort: null
-    # -- Load balancer IPO address if service type is LoadBalancer
-    loadBalancerIP: null
     # -- Annotations for the nginx service
     annotations: {}
     # -- Labels for nginx service
     labels: {}
-  # Ingress configuration
-  ingress:
-    # -- Specifies whether an ingress for the nginx should be created
-    enabled: false
-    # -- Ingress Class Name. MAY be required for Kubernetes versions >= 1.18
-    # ingressClassName: nginx
-    # -- Annotations for the nginx ingress
-    annotations: {}
-    # -- Hosts configuration for the nginx ingress
-    hosts:
-      - host: nginx.loki.example.com
-        paths:
-          - path: /
-            # -- pathType (e.g. ImplementationSpecific, Prefix, .. etc.) might also be required by some Ingress Controllers
-            # pathType: Prefix
-    # -- TLS configuration for the nginx ingress
-    tls:
-      - secretName: loki-nginx-tls
-        hosts:
-          - nginx.loki.example.com
-  # Basic auth configuration
-  basicAuth:
-    # -- Enables basic authentication for nginx
-    enabled: false
-    # -- The basic auth username for nginx
-    username: null
-    # -- The basic auth password for nginx
-    password: null
-    # -- Uses the specified username and password to compute a htpasswd using Sprig's `htpasswd` function.
-    # The value is templated using `tpl`. Override this to use a custom htpasswd, e.g. in case the default causes
-    # high CPU load.
-    htpasswd: >-
-      {{ htpasswd (required "'nginx.basicAuth.username' is required" .Values.nginx.basicAuth.username) (required "'nginx.basicAuth.password' is required" .Values.nginx.basicAuth.password) }}
-    # -- Existing basic auth secret to use. Must contain '.htpasswd'
-    existingSecret: null
-  # Configures the readiness probe for nginx
-  readinessProbe:
-    httpGet:
-      path: /
-      port: http-metric
-    initialDelaySeconds: 15
-    timeoutSeconds: 1
-  nginxConfig:
-    # -- NGINX log format
-    logFormat: |-
-      main '$remote_addr - $remote_user [$time_local]  $status '
-              '"$request" $body_bytes_sent "$http_referer" '
-              '"$http_user_agent" "$http_x_forwarded_for"';
-    # -- Allows appending custom configuration to the server block
-    serverSnippet: ""
-    # -- Allows appending custom configuration to the http block
-    httpSnippet: ""
-    # -- Config file contents for Nginx. Passed through the `tpl` function to allow templating
-    # @default -- See values.yaml
-    file: |
-      worker_processes  5;  ## Default: 1
-      error_log  /dev/stderr;
-      pid        /tmp/nginx.pid;
-      worker_rlimit_nofile 8192;
-
-      events {
-        worker_connections  4096;  ## Default: 1024
-      }
-
-      http {
-        client_body_temp_path /tmp/client_temp;
-        proxy_temp_path       /tmp/proxy_temp_path;
-        fastcgi_temp_path     /tmp/fastcgi_temp;
-        uwsgi_temp_path       /tmp/uwsgi_temp;
-        scgi_temp_path        /tmp/scgi_temp;
-
-        default_type application/octet-stream;
-        log_format   {{ .Values.nginx.nginxConfig.logFormat }}
-
-        {{- if .Values.nginx.verboseLogging }}
-        access_log   /dev/stderr  main;
-        {{- else }}
-
-        map $status $loggable {
-          ~^[23]  0;
-          default 1;
-        }
-        access_log   /dev/stderr  main  if=$loggable;
-        {{- end }}
-
-        sendfile     on;
-        tcp_nopush   on;
-        resolver {{ .Values.global.dnsService }}.{{ .Values.global.dnsNamespace }}.svc.{{ .Values.global.clusterDomain }};
-
-        {{- with .Values.nginx.nginxConfig.httpSnippet }}
-        {{ . | nindent 2 }}
-        {{- end }}
-
-        server {
-          listen 8080;
-
-          {{- if .Values.nginx.basicAuth.enabled }}
-          auth_basic           "Mimir";
-          auth_basic_user_file /etc/nginx/secrets/.htpasswd;
-          {{- end }}
-
-          location = / {
-            return 200 'OK';
-            auth_basic off;
-          }
-
-          {{- if not (include "mimir.calculatedConfig" . | fromYaml).multitenancy_enabled }}
-          proxy_set_header X-Scope-OrgID 0;
-          {{- end }}
-
-          # Distributor endpoints
-          location /distributor {
-            proxy_pass      http://{{ template "mimir.fullname" . }}-distributor.{{ .Release.Namespace }}.svc.cluster.local:{{ include "mimir.serverHttpListenPort" . }}$request_uri;
-          }
-          location = /api/v1/push {
-            proxy_pass      http://{{ template "mimir.fullname" . }}-distributor.{{ .Release.Namespace }}.svc.cluster.local:{{ include "mimir.serverHttpListenPort" . }}$request_uri;
-          }
-
-          # Alertmanager endpoints
-          location {{ template "mimir.alertmanagerHttpPrefix" . }} {
-            proxy_pass      http://{{ template "mimir.fullname" . }}-alertmanager.{{ .Release.Namespace }}.svc.cluster.local:{{ include "mimir.serverHttpListenPort" . }}$request_uri;
-          }
-          location = /multitenant_alertmanager/status {
-            proxy_pass      http://{{ template "mimir.fullname" . }}-alertmanager.{{ .Release.Namespace }}.svc.cluster.local:{{ include "mimir.serverHttpListenPort" . }}$request_uri;
-          }
-          location = /api/v1/alerts {
-            proxy_pass      http://{{ template "mimir.fullname" . }}-alertmanager.{{ .Release.Namespace }}.svc.cluster.local:{{ include "mimir.serverHttpListenPort" . }}$request_uri;
-          }
-
-          # Ruler endpoints
-          location {{ template "mimir.prometheusHttpPrefix" . }}/config/v1/rules {
-            proxy_pass      http://{{ template "mimir.fullname" . }}-ruler.{{ .Release.Namespace }}.svc.cluster.local:{{ include "mimir.serverHttpListenPort" . }}$request_uri;
-          }
-          location {{ template "mimir.prometheusHttpPrefix" . }}/api/v1/rules {
-            proxy_pass      http://{{ template "mimir.fullname" . }}-ruler.{{ .Release.Namespace }}.svc.cluster.local:{{ include "mimir.serverHttpListenPort" . }}$request_uri;
-          }
-          location = /api/v1/rules {
-            proxy_pass      http://{{ template "mimir.fullname" . }}-ruler.{{ .Release.Namespace }}.svc.cluster.local:{{ include "mimir.serverHttpListenPort" . }}$request_uri;
-          }
-          location {{ template "mimir.prometheusHttpPrefix" . }}/api/v1/alerts {
-            proxy_pass      http://{{ template "mimir.fullname" . }}-ruler.{{ .Release.Namespace }}.svc.cluster.local:{{ include "mimir.serverHttpListenPort" . }}$request_uri;
-          }
-          location = {{ template "mimir.prometheusHttpPrefix" . }}/rules {
-            proxy_pass      http://{{ template "mimir.fullname" . }}-ruler.{{ .Release.Namespace }}.svc.cluster.local:{{ include "mimir.serverHttpListenPort" . }}$request_uri;
-          }
-          location = /ruler/ring {
-            proxy_pass      http://{{ template "mimir.fullname" . }}-ruler.{{ .Release.Namespace }}.svc.cluster.local:{{ include "mimir.serverHttpListenPort" . }}$request_uri;
-          }
-
-          # Rest of {{ template "mimir.prometheusHttpPrefix" . }} goes to the query frontend
-          location {{ template "mimir.prometheusHttpPrefix" . }} {
-            proxy_pass      http://{{ template "mimir.fullname" . }}-query-frontend.{{ .Release.Namespace }}.svc.cluster.local:{{ include "mimir.serverHttpListenPort" . }}$request_uri;
-          }
-
-          {{- with .Values.nginx.nginxConfig.serverSnippet }}
-          {{ . | nindent 4 }}
-          {{- end }}
-        }
-      }
