--- a/Lib/Neon.Kube.Setup/Resources/Helm/tempo/templates/ingester/statefulset-ingester.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/tempo/templates/ingester/statefulset-ingester.yaml
@@ -31,6 +31,7 @@ spec:
       annotations:
         sidecar.istio.io/inject: "{{ .Values.serviceMesh.enabled }}"
         traffic.sidecar.istio.io/excludeInboundPorts: "7946"
+        traffic.sidecar.istio.io/excludeOutboundPorts: "7946"
         checksum/config: {{ include (print $.Template.BasePath "/configmap-tempo.yaml") . | sha256sum }}
         {{- with .Values.tempo.podAnnotations }}
         {{- toYaml . | nindent 8 }}
