--- a/Lib/Neon.Kube.Setup/Resources/Helm/tempo/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/tempo/values.yaml
@@ -473,7 +473,7 @@ queryFrontend:
 
 search:
   # -- Enable Tempo search
-  enabled: false
+  enabled: true
 
 traces:
   jaeger:
@@ -498,7 +498,7 @@ traces:
   kafka: {}
 
 config: |
-  multitenancy_enabled: false
+  multitenancy_enabled: true
   search_enabled: {{ .Values.search.enabled }}
   compactor:
     compaction:
@@ -588,8 +588,8 @@ config: |
     http_listen_port: {{ .Values.server.httpListenPort }}
     log_level: {{ .Values.server.logLevel }}
     log_format: {{ .Values.server.logFormat }}
-    grpc_server_max_recv_msg_size: {{ .Values.server.grpc_server_max_recv_msg_size }}
-    grpc_server_max_send_msg_size: {{ .Values.server.grpc_server_max_send_msg_size }}
+    grpc_server_max_recv_msg_size: 4194304
+    grpc_server_max_send_msg_size: 4194304
   storage:
     trace:
       backend: {{.Values.storage.trace.backend}}
@@ -624,11 +624,7 @@ server:
   # -- Log level. Can be set to trace, debug, info (default), warn error, fatal, panic
   logLevel: info
   # -- Log format. Can be set to logfmt (default) or json.
-  logFormat: logfmt
-  # -- Max gRPC message size that can be received
-  grpc_server_max_recv_msg_size: 4194304
-  # -- Max gRPC message size that can be sent
-  grpc_server_max_send_msg_size: 4194304
+  logFormat: json
 # To configure a different storage backend instead of local storage:
 # storage:
 #   trace:
@@ -711,223 +707,18 @@ prometheusRule:
   #     - record: node_namespace_pod_container:container_cpu_usage_seconds_total:sum_rate
   #       expr: sum(rate(container_cpu_usage_seconds_total[1m])) by (node, namespace, pod, container)
 
-# Configuration for the gateway
-gateway:
-  # -- Specifies whether the gateway should be enabled
-  enabled: false
-  # -- Number of replicas for the gateway
-  replicas: 1
-  # -- Enable logging of 2xx and 3xx HTTP requests
-  verboseLogging: true
-  image:
-    # -- The Docker registry for the gateway image
-    registry: docker.io
-    # -- The gateway image repository
-    repository: nginxinc/nginx-unprivileged
-    # -- The gateway image tag
-    tag: 1.19-alpine
-    # -- The gateway image pull policy
-    pullPolicy: IfNotPresent
-  # -- The name of the PriorityClass for gateway pods
-  priorityClassName: null
-  # -- Labels for gateway pods
-  podLabels: {}
-  # -- Annotations for gateway pods
-  podAnnotations: {}
-  # -- Additional CLI args for the gateway
-  extraArgs: []
-  # -- Environment variables to add to the gateway pods
-  extraEnv: []
-  # -- Environment variables from secrets or configmaps to add to the gateway pods
-  extraEnvFrom: []
-  # -- Volumes to add to the gateway pods
-  extraVolumes: []
-  # -- Volume mounts to add to the gateway pods
-  extraVolumeMounts: []
-  # -- Resource requests and limits for the gateway
-  resources: {}
-  # -- Grace period to allow the gateway to shutdown before it is killed
-  terminationGracePeriodSeconds: 30
-  # -- Affinity for gateway pods. Passed through `tpl` and, thus, to be configured as string
-  # @default -- Hard node and soft zone anti-affinity
-  affinity: |
-    podAntiAffinity:
-      requiredDuringSchedulingIgnoredDuringExecution:
-        - labelSelector:
-            matchLabels:
-              {{- include "tempo.gatewaySelectorLabels" . | nindent 10 }}
-          topologyKey: kubernetes.io/hostname
-      preferredDuringSchedulingIgnoredDuringExecution:
-        - weight: 100
-          podAffinityTerm:
-            labelSelector:
-              matchLabels:
-                {{- include "tempo.gatewaySelectorLabels" . | nindent 12 }}
-            topologyKey: failure-domain.beta.kubernetes.io/zone
-  # -- Node selector for gateway pods
-  nodeSelector: {}
-  # -- Tolerations for gateway pods
-  tolerations: []
-  # Gateway service configuration
+# Configuration for istio gateway
+istio:
   service:
-    # -- Port of the gateway service
+    # -- Port of the nginx service
     port: 80
-    # -- Type of the gateway service
+    # -- Type of the nginx service
     type: ClusterIP
-    # -- ClusterIP of the gateway service
+    # -- ClusterIP of the nginx service
     clusterIP: null
     # -- Node port if service type is NodePort
     nodePort: null
-    # -- Load balancer IPO address if service type is LoadBalancer
-    loadBalancerIP: null
-    # -- Annotations for the gateway service
+    # -- Annotations for the nginx service
     annotations: {}
-    # -- Labels for gateway service
+    # -- Labels for nginx service
     labels: {}
-  # Gateway ingress configuration
-  ingress:
-    # -- Specifies whether an ingress for the gateway should be created
-    enabled: false
-    # -- Ingress Class Name. MAY be required for Kubernetes versions >= 1.18
-    # ingressClassName: nginx
-    # -- Annotations for the gateway ingress
-    annotations: {}
-    # -- Hosts configuration for the gateway ingress
-    hosts:
-      - host: gateway.tempo.example.com
-        paths:
-          - path: /
-            # -- pathType (e.g. ImplementationSpecific, Prefix, .. etc.) might also be required by some Ingress Controllers
-            # pathType: Prefix
-    # -- TLS configuration for the gateway ingress
-    tls:
-      - secretName: tempo-gateway-tls
-        hosts:
-          - gateway.tempo.example.com
-  # Basic auth configuration
-  basicAuth:
-    # -- Enables basic authentication for the gateway
-    enabled: false
-    # -- The basic auth username for the gateway
-    username: null
-    # -- The basic auth password for the gateway
-    password: null
-    # -- Uses the specified username and password to compute a htpasswd using Sprig's `htpasswd` function.
-    # The value is templated using `tpl`. Override this to use a custom htpasswd, e.g. in case the default causes
-    # high CPU load.
-    htpasswd: >-
-      {{ htpasswd (required "'gateway.basicAuth.username' is required" .Values.gateway.basicAuth.username) (required "'gateway.basicAuth.password' is required" .Values.gateway.basicAuth.password) }}
-    # -- Existing basic auth secret to use. Must contain '.htpasswd'
-    existingSecret: null
-  # Configures the readiness probe for the gateway
-  readinessProbe:
-    httpGet:
-      path: /
-      port: http
-    initialDelaySeconds: 15
-    timeoutSeconds: 1
-  nginxConfig:
-    # -- NGINX log format
-    logFormat: |-
-      main '$remote_addr - $remote_user [$time_local]  $status '
-              '"$request" $body_bytes_sent "$http_referer" '
-              '"$http_user_agent" "$http_x_forwarded_for"';
-    # -- Allows appending custom configuration to the server block
-    serverSnippet: ""
-    # -- Allows appending custom configuration to the http block
-    httpSnippet: ""
-    # -- Config file contents for Nginx. Passed through the `tpl` function to allow templating
-    # @default -- See values.yaml
-    file: |
-      worker_processes  5;  ## Default: 1
-      error_log  /dev/stderr;
-      pid        /tmp/nginx.pid;
-      worker_rlimit_nofile 8192;
-
-      events {
-        worker_connections  4096;  ## Default: 1024
-      }
-
-      http {
-        client_body_temp_path /tmp/client_temp;
-        proxy_temp_path       /tmp/proxy_temp_path;
-        fastcgi_temp_path     /tmp/fastcgi_temp;
-        uwsgi_temp_path       /tmp/uwsgi_temp;
-        scgi_temp_path        /tmp/scgi_temp;
-
-        default_type application/octet-stream;
-        log_format   {{ .Values.gateway.nginxConfig.logFormat }}
-
-        {{- if .Values.gateway.verboseLogging }}
-        access_log   /dev/stderr  main;
-        {{- else }}
-
-        map $status $loggable {
-          ~^[23]  0;
-          default 1;
-        }
-        access_log   /dev/stderr  main  if=$loggable;
-        {{- end }}
-
-        sendfile     on;
-        tcp_nopush   on;
-        resolver {{ .Values.global.dnsService }}.{{ .Values.global.dnsNamespace }}.svc.{{ .Values.global.clusterDomain }};
-
-        {{- with .Values.gateway.nginxConfig.httpSnippet }}
-        {{ . | nindent 2 }}
-        {{- end }}
-
-        server {
-          listen             8080;
-
-          {{- if .Values.gateway.basicAuth.enabled }}
-          auth_basic           "Tempo";
-          auth_basic_user_file /etc/nginx/secrets/.htpasswd;
-          {{- end }}
-
-          location = / {
-            return 200 'OK';
-            auth_basic off;
-          }
-
-          location = /jaeger/api/traces {
-            proxy_pass       http://{{ include "tempo.distributorFullname" . }}.{{ .Release.Namespace }}.svc.{{ .Values.global.clusterDomain }}:14268/api/traces;
-          }
-
-          location = /zipkin/spans {
-            proxy_pass       http://{{ include "tempo.distributorFullname" . }}.{{ .Release.Namespace }}.svc.{{ .Values.global.clusterDomain }}:9411/spans;
-          }
-
-          location = /otlp/v1/traces {
-            proxy_pass       http://{{ include "tempo.distributorFullname" . }}.{{ .Release.Namespace }}.svc.{{ .Values.global.clusterDomain }}:55681/v1/traces;
-          }
-
-          location ^~ /api {
-            proxy_pass       http://{{ include "tempo.queryFrontendFullname" . }}.{{ .Release.Namespace }}.svc.{{ .Values.global.clusterDomain }}:3100$request_uri;
-          }
-
-          location = /flush {
-            proxy_pass       http://{{ include "tempo.ingesterFullname" . }}.{{ .Release.Namespace }}.svc.{{ .Values.global.clusterDomain }}:3100$request_uri;
-          }
-
-          location = /shutdown {
-            proxy_pass       http://{{ include "tempo.ingesterFullname" . }}.{{ .Release.Namespace }}.svc.{{ .Values.global.clusterDomain }}:3100$request_uri;
-          }
-
-          location = /distributor/ring {
-            proxy_pass       http://{{ include "tempo.distributorFullname" . }}.{{ .Release.Namespace }}.svc.{{ .Values.global.clusterDomain }}:3100$request_uri;
-          }
-
-          location = /ingester/ring {
-            proxy_pass       http://{{ include "tempo.distributorFullname" . }}.{{ .Release.Namespace }}.svc.{{ .Values.global.clusterDomain }}:3100$request_uri;
-          }
-
-          location = /compactor/ring {
-            proxy_pass       http://{{ include "tempo.compactorFullname" . }}.{{ .Release.Namespace }}.svc.{{ .Values.global.clusterDomain }}:3100$request_uri;
-          }
-
-          {{- with .Values.gateway.nginxConfig.serverSnippet }}
-          {{ . | nindent 4 }}
-          {{- end }}
-        }
-      }
