enable istio by default

--- a/Lib/Neon.Kube.Setup/Resources/Helm/istio/templates/istio.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/istio/templates/istio.yaml
@@ -95,6 +95,8 @@ spec:
       enabled: true
       namespace: kube-system
   values:
+    sidecarInjectorWebhook:
+      enableNamespacesByDefault: true
     global:
       istioNamespace: {{ .Release.Namespace }}
       logging:
